test/libsolidity/syntaxTests/errors/named_error.sol
error E(uint a);
function f() pure {
    revert(E({a: 2}));
}
// ----
